Add support for 3rd match in a week
Add support for 3rd match in a week:
- added 3rd column for match in AssistantPlayersTable, PlayersTable, PlayerTable
- fixed problem with friday match counting for previous week
- added info about matches played in current week in PlayersTable
- added translations

--- a/src/main/resources/lang/sokker.properties
+++ b/src/main/resources/lang/sokker.properties
@@ -1619,6 +1619,8 @@ table = table
 
 table.1st                         = 1st
 table.2nd                         = 2nd
+table.3rd                         = 3rd
+table.nextTraining                = Next Training ->
 
 table.age                         = Age
 table.assists                     = Assists
