--- a/src/main/resources/lang/sokker_cs_CZ.properties
+++ b/src/main/resources/lang/sokker_cs_CZ.properties
@@ -1003,6 +1003,8 @@ table = tabulka
 
 table.1st                         = 1.
 table.2nd                         = 2.
+table.3rd                         = 3.
+table.nextTraining                = Next Training ->
 table.age                         = V\u011bk
 table.assists                     = P\u0159ihr\u00e1vky
 table.cards                       = Krt
