--- a/src/main/resources/lang/sokker_da_DK.properties
+++ b/src/main/resources/lang/sokker_da_DK.properties
@@ -943,6 +943,8 @@ statusBar.versionLabel.text    = Seneste version:
 
 table.1st                         = 1.hold
 table.2nd                         = 2.hold
+table.3rd                         = 3.hold
+table.nextTraining                = Next Training ->
 table.age                         = Alder
 table.cards                       = Adv
 table.club                        = Klub
