--- a/src/main/resources/lang/sokker_de_DE.properties
+++ b/src/main/resources/lang/sokker_de_DE.properties
@@ -1003,8 +1003,10 @@ synchronizer.write                   = XML-Datei wird auf Festplatte geschrieben
 
 table = Tabelle
 
-table.1st                         = 1ste
-table.2nd                         = 2te
+table.1st                         = 1,
+table.2nd                         = 2.
+table.3rd                         = 3.
+table.nextTraining                = Next Training ->
 table.age                         = Alter
 table.assists                     = Vorlagen
 table.cards                       = Karten
