--- a/src/main/resources/lang/sokker_el_GR.properties
+++ b/src/main/resources/lang/sokker_el_GR.properties
@@ -1600,6 +1600,8 @@ statusBar.versionLabel.text = \u03a4\u03b5\u03bb\u03b5\u03c5\u03c4\u03b1\u03af\u
 
 table.1st = 1\u03bf\u03c2
 table.2nd = 2\u03bf\u03c2
+table.3rd = 3\u03bf\u03c2
+table.nextTraining                = Next Training ->
 
 table.age = \u0397\u03bb\u03b9\u03ba\u03af\u03b1
 table.cards = \u039a\u03ac\u03c1\u03c4\u03b5\u03c2
