--- a/src/main/resources/lang/sokker_es_ES.properties
+++ b/src/main/resources/lang/sokker_es_ES.properties
@@ -1006,6 +1006,8 @@ table = tabla
 
 table.1st                         = 1
 table.2nd                         = 2
+table.3rd                         = 3
+table.nextTraining                = Next Training ->
 table.age                         = Edad
 table.assists                     = Asistencias
 table.cards                       = Tar
