--- a/src/main/resources/lang/sokker_fr_FR.properties
+++ b/src/main/resources/lang/sokker_fr_FR.properties
@@ -1005,7 +1005,9 @@ synchronizer.write                   = Ecrit les fichiers xml sur le disque...
 table = table
 
 table.1st                         = 1er
-table.2nd                         = 2\u00e8me
+table.2nd                         = 2e
+table.3rd                         = 3e
+table.nextTraining                = Next Training ->
 table.age                         = Age
 table.assists                     = Assistants
 table.cards                       = Crd
