--- a/src/main/resources/lang/sokker_hu_HU.properties
+++ b/src/main/resources/lang/sokker_hu_HU.properties
@@ -1027,6 +1027,8 @@ table = T\u00e1bl\u00e1zat
 
 table.1st                = 1.
 table.2nd                = 2.
+table.3rd                = 3.
+table.nextTraining                = Next Training ->
 table.age                = Kor
 table.cards              = Lapok
 table.club               = Klub
