--- a/src/main/resources/lang/sokker_it_IT.properties
+++ b/src/main/resources/lang/sokker_it_IT.properties
@@ -1004,8 +1004,10 @@ synchronizer.write                   = Scrittura dei file xml sul disco...
 
 table = tabella
 
-table.1st                         = Domenica
-table.2nd                         = Mercoled\u00ec
+table.1st                         = 1\u00ba
+table.2nd                         = 2\u00ba
+table.3rd                         = 3\u00ba
+table.nextTraining                = Next Training ->
 table.age                         = Et\u00e1
 table.assists                     = Assist
 table.cards                       = Crt
