--- a/src/main/resources/lang/sokker_pl_PL.properties
+++ b/src/main/resources/lang/sokker_pl_PL.properties
@@ -1060,6 +1060,8 @@ table = Tabela
 
 table.1st                         = 1st
 table.2nd                         = 2nd
+table.3rd                         = 3rd
+table.nextTraining                = Kolejny trening ->
 table.age                         = Wiek
 table.assists                     = Asysty
 table.bmi                         = BMI
