--- a/src/main/resources/lang/sokker_ro_RO.properties
+++ b/src/main/resources/lang/sokker_ro_RO.properties
@@ -1416,6 +1416,8 @@ statusBar.versionLabel.text    = Ultima versiune:
 
 table.1st                         = 1-ul
 table.2nd                         = 2-lea
+table.3rd                         = 3-lea
+table.nextTraining                = Next Training ->
 
 table.age                         = V\u00e2rst\u00e3
 table.cards                       = Ct\u00ba
