--- a/src/main/resources/lang/sokker_bg_BG.properties
+++ b/src/main/resources/lang/sokker_bg_BG.properties
@@ -928,6 +928,8 @@ statusBar.versionLabel.text    = \u041F\u043E\u0441\u043B\u0435\u0434\u043D\u043
 
 table.1st                         = 1\u0432\u0438
 table.2nd                         = 2\u0440\u0438
+table.3rd                         = 3\u0442\u0438
+table.nextTraining                = Next Training ->
 table.age                         = \u0413\u043E\u0434\u0438\u043D\u0438
 table.cards                       = \u041A\u0430\u0440
 table.club                        = \u041A\u043B\u0443\u0431
