--- a/src/main/resources/lang/sokker_en_EN.properties
+++ b/src/main/resources/lang/sokker_en_EN.properties
@@ -1619,6 +1619,8 @@ table = table
 
 table.1st                         = 1st
 table.2nd                         = 2nd
+table.3rd                         = 3rd
+table.nextTraining                = Next Training ->
 
 table.age                         = Age
 table.assists                     = Assists
