--- a/src/main/resources/lang/sokker_et_EE.properties
+++ b/src/main/resources/lang/sokker_et_EE.properties
@@ -826,6 +826,8 @@ statusBar.versionLabel.text    = Viimane versioon:
 
 table.1st                         = 1st
 table.2nd                         = 2nd
+table.3rd                         = 3rd
+table.nextTraining                = Next Training ->
 table.age                         = Vanus
 table.cards                       = Kaardid
 table.club                        = Klubi
