--- a/src/main/resources/lang/sokker_ru_RU.properties
+++ b/src/main/resources/lang/sokker_ru_RU.properties
@@ -1604,8 +1604,10 @@ synchronizer.write                   = \u0417\u0430\u043f\u0438\u0441\u044c xml 
 
 table = \u0442\u0430\u0431\u043b\u0438\u0446\u0430
 
-table.1st                         = 1\u044b\u0439
-table.2nd                         = 2\u043e\u0439
+table.1st                         = 1-\u0439
+table.2nd                         = 2-\u0439
+table.3rd                         = 3-\u0439
+table.nextTraining                = Next Training ->
 
 table.age                         = \u043b\u0435\u0442
 table.assists                     = \u043f\u0430\u0441\u043e\u0432
