--- a/src/main/resources/lang/sokker_zh_CN.properties
+++ b/src/main/resources/lang/sokker_zh_CN.properties
@@ -1007,6 +1007,8 @@ table = Table
 
 table.1st                         = 1st
 table.2nd                         = 2nd
+table.3rd                         = 3rd
+table.nextTraining                = Next Training ->
 table.age                         = \u5e74\u9f84
 table.cards                       = \u7ea2\u9ec4\u724c
 table.club                        = \u4ff1\u4e50\u90e8
