--- a/src/main/resources/lang/sokker_zh_CN.properties.2
+++ b/src/main/resources/lang/sokker_zh_CN.properties.2
@@ -1600,6 +1600,8 @@ statusBar.versionLabel.text    = \u6700\u65b0\u7248\u672c:
 
 table.1st                         = 1st
 table.2nd                         = 2nd
+table.3rd                         = 3rd
+table.nextTraining                = Next Training ->
 
 table.age                         = \u5e74\u9f84
 table.cards                       = \u7ea2\u9ec4\u724c
